@@ -58,6 +58,7 @@ class Server < Goliath::WebSocket
         if env['user'].client
           env.logger.error("#{env['user'].log_friendly}, disconnected from: #{env['user'].client.log_friendly}")
           env.logger.info("#{env['user'].log_friendly}, logged off: #{env['user'].client.log_friendly}")
+
           env['user'].log_off
           EM.cancel_timer(env['timer']) if env['timer']
         end
@@ -92,7 +93,8 @@ class Server < Goliath::WebSocket
               env['timer'].cancel if user.client.nil?
 
               broadcast = JSON.generate({:status => "ping",
-                                         :client => {:id => client.id},
+                                         :client => {:id => client.id,
+                                                     :dept_id => client.department.id},
                                          :user => {:name => user.name,
                                                    :username => user.username,
                                                    :id => user.id,
@@ -101,6 +103,7 @@ class Server < Goliath::WebSocket
               env.channels['clients/'+client.id.to_s] << broadcast
               env.channels['departments/'+client.department.id.to_s] << broadcast
               env.channels['users/'] << broadcast
+              env.channels['branches/'] << broadcast
             end.resume
           end
 
@@ -108,6 +111,7 @@ class Server < Goliath::WebSocket
 
           broadcast = JSON.generate({:status => "logged-on",
                                      :client => {:id => client.id,
+                                                 :dept_id => client.department.id,
                                                  :name => client.name,
                                                  :department => client.department.name,
                                                  :branch => client.department.branch.name},
@@ -120,6 +124,7 @@ class Server < Goliath::WebSocket
           env.channels['departments/'+client.department.id.to_s] << broadcast
           env.channels['clients/'+client.id.to_s] << broadcast
           env.channels['users/'] << broadcast
+          env.channels['branches/'] << broadcast
         when 'log-off'
           user = env['user']
           client = env['client']
@@ -130,7 +135,8 @@ class Server < Goliath::WebSocket
           env.logger.info("#{user.log_friendly}, logged off: #{client.log_friendly}")
 
           broadcast = JSON.generate({:status => "logged-off",
-                                     :client => {:id => client.id},
+                                     :client => {:id => client.id,
+                                                 :dept_id => client.department.id},
                                      :user => {:name => user.name,
                                                :username => user.username,
                                                :id => user.id,
@@ -139,6 +145,8 @@ class Server < Goliath::WebSocket
           env.channels['departments/'+client.department.id.to_s] << broadcast
           env.channels['clients/'+client.id.to_s] << broadcast
           env.channels['users/'] << broadcast
+          env.channels['branches/'] << broadcast
+
           env['user'] = nil
       end
     end.resume
